# FlashGen

./: PROJECT-README.md  README.md
Backend/: .vercelignore  available_models.txt  check_models.py  database.py  dependencies.py  flashcards.db  llm_utils.py  main.py  notes.db  pyproject.toml  requirements.txt  test_1_5_models.py  test_llm.py  test_results.txt  test_sm2.py  utils.py
Backend/routers/: flashcards.py  notes.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  firebase.js  index.css  main.jsx
Frontend/src/components/: AnswerInput.jsx  AnswerOptions.jsx  EditFlashcardForm.jsx  ExportButton.jsx  Features.jsx  FlashcardDetail.jsx  FlashcardFlip.jsx  FlashcardList.jsx  FlashcardPreview.jsx  FlashcardSets.jsx  FloatingLines.jsx  Footer.jsx  GenerateCardsButton.jsx  Hero.jsx  LoginForm.jsx  MultipleChoiceCard.jsx  Navbar.jsx  NoteCard.jsx  NoteDetailModal.jsx  NotesList.jsx  ProgressCharts.jsx  ProtectedRoute.jsx  RatingButtons.jsx  SearchBar.jsx  SignupForm.jsx  StatsDashboard.jsx  StatsOverview.jsx  StudyModeSelector.jsx  StudyProgressBar.jsx  TypingCard.jsx  UploadNoteForm.jsx
Frontend/src/pages/: Dashboard.jsx  FlashcardDetailPage.jsx  FlashcardsPage.jsx  Landing.jsx  Login.jsx  NotesPage.jsx  Signup.jsx  StatsPage.jsx  StudyFlipPage.jsx  StudyMultipleChoice.jsx  StudyTyping.jsx
